[tool.poetry]
name = "multi_party_learning"
version = "0.1.0"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"

syft = "^0.2.9"

#matplotlib = "^3.4.3"
#jupyterlab = "^3.2.1"
#torch = "^1.10.0"
#torchvision = "^0.11.1"
#tensorflow-datasets = "^4.4.0"
#tensorflow = "^2.6.1"
#pandas = "^1.3.4"
#numpy = "^1.21.4"
#opacus = "^0.14.0"
toolz = "^0.11.2"
#nvidia-smi = "^0.1.3"

[tool.poetry.dev-dependencies]
bpython = "^0.21"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
